--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@ flex-direction: column;
 
 }
 .hero--image{
-max-width:500px;
-max-height:400px;
-align-self: center;    
+max-width:100%;
+ max-height: 500px;
+align-self: stretch; 
+
 }
 
 .section{
@@ -34,3 +35,39 @@ align-self: center;
     padding: 20px;
 
 }
+
+.card   {
+
+    display:flex;
+    flex-direction:column;
+    width: 33%;
+    
+font-family: 'Poppins';
+font-weight: 500;
+font-size: 12px;
+
+}
+
+.card--image{
+
+width: 100%;
+height: 235px;
+
+border-radius: 9px;
+}
+
+.card--stats{
+    display:flex;
+
+}
+
+.cardGroup{
+
+    display:flex;
+    flex-wrap: wrap;
+
+    
+    
+}
+
+
