--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
 body {
     margin: 0;
     font-family: 'poppins','sans-serif';
+    color:#1D2E38;
 }
+
 
 nav {
     height: 70px;
@@ -21,12 +23,14 @@ nav {
 .hero{
 display:flex;
 flex-direction: column;
-
+background-color: #528079;
 }
 .hero--image{
 max-width:100%;
  max-height: 500px;
-align-self: stretch; 
+align-self: center; 
+border-radius: 10px;
+
 
 }
 
@@ -43,16 +47,16 @@ align-self: stretch;
     width: 33%;
     
 font-family: 'Poppins';
-font-weight: 500;
+font-weight: 600;
 font-size: 12px;
 
 }
 
 .card--image{
 
-width: 100%;
-height: 235px;
-
+max-width: 100%;
+height: 230px;
+align-self: self-start;
 border-radius: 9px;
 }
 
@@ -62,12 +66,10 @@ border-radius: 9px;
 }
 
 .cardGroup{
+    background-color: #528079;
 
     display:flex;
     flex-wrap: wrap;
-
-    
-    
-}
+} 
 
 
